--- a/scss/style.scss
+++ b/scss/style.scss
@@ -201,17 +201,25 @@ nav {
 .box.green { position:absolute;  top: 300px; left: 500px; }
 .box.blue { position:absolute;   top: 300px; left: 900px; }
 
+nav ul li {
+    position:relative;
+
+    // Filter horizontal position
+    &:nth-child(1) .filter { right: -5px; }
+    &:nth-child(2) .filter { right: -4px; }
+    &:nth-child(3) .filter { right: -2px; }
+}
+
 nav ul li .filter {
     display:none;
-
     position:absolute;
     width:236px;
-    top: 35px; left: -37px;
+    top: 35px; 
+    right:-4px; // default filter position
     z-index:100;
 
     div.content {
         width:236px - 25*2;
-        height:300px - 13 + 7;
         background:url(../img/backgrounds/bkg_filter.png) repeat-y -242px bottom;
         padding: 13px 25px 7px 25px;
     }
